--- a/photoeval/templates/photoeval/start.html
+++ b/photoeval/templates/photoeval/start.html
@@ -13,13 +13,16 @@
     <title></title>
   </head>
   <body>
+      <!--style="background-color:  rgb(1,1,1,0.9);"-->
 
     <nav class="navbar navbar-expand-lg navbar bg" >
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01"style="background-color:  rgb(1,1,1,0.9);">
-        <a class="navbar-brand" href="#" style="color: white;font-weight: bolder;">About</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+
+        <a class="navbar-brand" href="#"  style="color: white;font-weight: bolder;">About</a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active" >
             <a class="nav-link" href="{% url 'index' %}" style="color: white;font-weight: bold;">Home <span class="sr-only">(current)</span></a>
@@ -34,18 +37,53 @@
       </div>
     </nav>
 
+    <!--
+    <nav class="navbar navbar-exdark bg-dark">
+
+    <button class="navbar-toggler ml-auto " type="button" data-toggle="collapse" data-target="#collapsingNavbar4">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse collapse" id="collapsingNavbar4">
+        <ul class="navbar-nav">
+          <li class="nav-item active" >
+            <a class="nav-link" href="{% url 'index' %}" style="color: white;font-weight: bold;">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active" >
+            <a class="nav-link" href="{% url 'login' %}" style="color: white;font-weight: bold;margin-right:0;">Login <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active" >
+            <a class="nav-link" href="{% url 'signup' %}" style="color: white;font-weight: bold;margin-right:0;">Sign  <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+    </div>
+</nav>
+-->
+    {% if messages %}
+      {% for message in messages %}
+        <div id="msgs">{{message}}</div>
+      {% endfor %}
+    {% endif %}
+
     <h1 class="display-4" style="color: white;font-family: Lato,sans-serif;margin-left: 3%;margin-top: 3%;">You'r Here!</h1>
     <p class="lead"  style="color: white;font-family: Lato,sans-serif;margin-left: 3%;">Go Ahead and fill your instagram account name then accept our instagram request and then choose how many pictures for us to analyse but know that the bigger the count the better the accuracy but the longer it will take</p>
     <br><br><br>
 
-    <form name="myform" class="" action="{% url 'start' %}" method="post" onsubmit="return validateform()">
+    <form name="myform" class="" action="{% url 'follow' %}" method="post" onsubmit="return validateform()">
       {% csrf_token %}
-        <div id="lbl">Account Name: </div><input name="actname" id="inp" type="text">
+      <table style="margin-left: 3%;">
+        <tr>
+        <td style="width: 40%;"><div id="lbl">Account Name: </div></td>
+        <td><input name="actname" id="inp"  required type="text"></td>
+      </tr>
+      <tr>
         <br><br>
-        <div class="slidecontainer">
-            <div id="lbl">Img Count: </div><input name="imgcount" id="inp" class="inp_num" type="number">
-        </div>
-        <a href="{% url 'start' %}"><input type="submit" value="Submit" id="btn"></a>
+            <td ><div id="lbl">Img Count: </div></td>
+            <td><input name="imgcount" required id="inp" class="inp_num" type="number"></td>
+      </tr>
+      <tr>
+        <td style="width: 40%;" colspan="2"><a href="{% url 'start' %}"><input type="submit" value="Submit" id="btn"></a></td>
+      </tr>
+      </table>
     </form>
     <br><br>
       <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
