--- a/photoeval/templates/photoeval/train.html
+++ b/photoeval/templates/photoeval/train.html
@@ -69,7 +69,7 @@
     <br><br><br>
     {% if messages %}
       {% for message in messages %}
-        <form action="{% url 'data' %}" method="POST">
+        <form action="{% url 'train' %}" method="POST">
           {% csrf_token %}
         <h1>zok</h1>
         <input name="username" type="hidden" value="{{message}}">
