--- a/photoeval/templates/photoeval/train.html
+++ b/photoeval/templates/photoeval/train.html
@@ -65,7 +65,8 @@
     {% endif %}
 
     <br>
-    <p class="lead"  style="color: white;font-family: Lato,sans-serif;margin-left: 3%;">After you accept the instagram follow request go ahead and press the button below in order for us to download the data and analyze then predict</p>
+    <p class="lead"  style="color: white;font-family: Lato,sans-serif;margin-left: 3%;">Alright, Everthing is set and since this is your first time you 'll have to wait for a while here you can chill with this game while the nerds handle it</p>
+    <canvas id="myCanvas" style="margin-left: 35%;margin-top: 8%;" width="480" height="320"></canvas>
     <br><br><br>
     {% if messages %}
       {% for message in messages %}
@@ -84,18 +85,173 @@
       <!--Boostrap jQuery-->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script type="text/javascript">
-        function validateform(){
-          actname = document.myform.actname.value
-          imgcount = document.myform.imgcount.value
-          if (imgcount >= 200 || imgcount < 0){
-            alert("Img count need to be between 200 and 0")
-            return false
+      var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        var ballRadius = 10;
+        var x = canvas.width/2;
+        var y = canvas.height-30;
+        var dx = 2;
+        var dy = -2;
+        var paddleHeight = 10;
+        var paddleWidth = 75;
+        var paddleX = (canvas.width-paddleWidth)/2;
+        var rightPressed = false;
+        var leftPressed = false;
+        var brickRowCount = 5;
+        var brickColumnCount = 3;
+        var brickWidth = 75;
+        var brickHeight = 20;
+        var brickPadding = 10;
+        var brickOffsetTop = 30;
+        var brickOffsetLeft = 30;
+        var score = 0;
+        var lives = 3;
+
+        var bricks = [];
+        for(var c=0; c<brickColumnCount; c++) {
+        bricks[c] = [];
+        for(var r=0; r<brickRowCount; r++) {
+          bricks[c][r] = { x: 0, y: 0, status: 1 };
+        }
+        }
+
+        document.addEventListener("keydown", keyDownHandler, false);
+        document.addEventListener("keyup", keyUpHandler, false);
+        document.addEventListener("mousemove", mouseMoveHandler, false);
+
+        function keyDownHandler(e) {
+          if(e.key == "Right" || e.key == "ArrowRight") {
+              rightPressed = true;
           }
-          else{
-            alert('done')
-            return true
+          else if(e.key == "Left" || e.key == "ArrowLeft") {
+              leftPressed = true;
           }
         }
+
+        function keyUpHandler(e) {
+          if(e.key == "Right" || e.key == "ArrowRight") {
+              rightPressed = false;
+          }
+          else if(e.key == "Left" || e.key == "ArrowLeft") {
+              leftPressed = false;
+          }
+        }
+
+        function mouseMoveHandler(e) {
+        var relativeX = e.clientX - canvas.offsetLeft;
+        if(relativeX > 0 && relativeX < canvas.width) {
+          paddleX = relativeX - paddleWidth/2;
+        }
+        }
+        function collisionDetection() {
+        for(var c=0; c<brickColumnCount; c++) {
+          for(var r=0; r<brickRowCount; r++) {
+            var b = bricks[c][r];
+            if(b.status == 1) {
+              if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
+                dy = -dy;
+                b.status = 0;
+                score++;
+                if(score == brickRowCount*brickColumnCount) {
+                  //alert("YOU WIN, CONGRATS!");
+                  //document.location.reload();
+                }
+              }
+            }
+          }
+        }
+        }
+
+        function drawBall() {
+        ctx.beginPath();
+        ctx.arc(x, y, ballRadius, 0, Math.PI*2);
+        ctx.fillStyle = "#a814f7";
+        ctx.fill();
+        ctx.closePath();
+        }
+        function drawPaddle() {
+        ctx.beginPath();
+        ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
+        ctx.fillStyle = "#a814f7";
+        ctx.fill();
+        ctx.closePath();
+        }
+        function drawBricks() {
+        for(var c=0; c<brickColumnCount; c++) {
+          for(var r=0; r<brickRowCount; r++) {
+            if(bricks[c][r].status == 1) {
+              var brickX = (r*(brickWidth+brickPadding))+brickOffsetLeft;
+              var brickY = (c*(brickHeight+brickPadding))+brickOffsetTop;
+              bricks[c][r].x = brickX;
+              bricks[c][r].y = brickY;
+              ctx.beginPath();
+              ctx.rect(brickX, brickY, brickWidth, brickHeight);
+              ctx.fillStyle = "#a814f7";
+              ctx.fill();
+              ctx.closePath();
+            }
+          }
+        }
+        }
+        function drawScore() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#a814f7";
+        ctx.fillText("Score: "+score, 8, 20);
+        }
+        function drawLives() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#a814f7";
+        ctx.fillText("Lives: "+lives, canvas.width-65, 20);
+        }
+
+        function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawBricks();
+        drawBall();
+        drawPaddle();
+        drawScore();
+        drawLives();
+        collisionDetection();
+
+        if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
+          dx = -dx;
+        }
+        if(y + dy < ballRadius) {
+          dy = -dy;
+        }
+        else if(y + dy > canvas.height-ballRadius) {
+          if(x > paddleX && x < paddleX + paddleWidth) {
+            dy = -dy;
+          }
+          else {
+            lives--;
+            if(!lives) {
+              //alert("GAME OVER");
+              //document.location.reload();
+            }
+            else {
+              x = canvas.width/2;
+              y = canvas.height-30;
+              dx = 3;
+              dy = -3;
+              paddleX = (canvas.width-paddleWidth)/2;
+            }
+          }
+        }
+
+        if(rightPressed && paddleX < canvas.width-paddleWidth) {
+          paddleX += 7;
+        }
+        else if(leftPressed && paddleX > 0) {
+          paddleX -= 7;
+        }
+
+        x += dx;
+        y += dy;
+        requestAnimationFrame(draw);
+        }
+
+        draw();
 
       </script>
   </body>
